# itabqa

./: README.md  cli.py  donwload.py  evaluate_bd_vqa.ipynb  nb.ipynb  nb_1.qmd  pyproject.toml  run_gen_training_samples.py  run_qa_inference.py
itabqa/: config.py  experiments.py  io_func.py  loader.py  m_duck.py  m_gramformer.py  objs.py  parse_number.py  post_processing_html.py  qa.py
tests/: test_itabqa.py
