[tool.poetry]
name = "itabqa"
version = "0.1.0"
description = ""
authors = ["phucty <phuc.nii.ac.jp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.7.0"
pandas = "^1.5.3"
transformers = "^4.26.1"
tqdm = "^4.64.1"
ujson = "^5.7.0"
numpy = "^1.24.2"
plotly = "^5.13.0"
lxml = "^4.9.2"
strsimpy = "^0.2.1"
scikit-learn = "^1.2.1"
accelerate = "^0.16.0"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.11.2"
spacy = "3.5"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
